# awsm-audio

./: .env.example  .gitignore  .mcp.json  Cargo.toml  README.md  Taskfile.yml  package-lock.json
.github/workflows/: ci.yml  pages.yml  release.yml
cloudflare/editor/: wrangler.jsonc
docs/: RELEASING.md
docs/plans/: MCP-STATUS.md  MCP.md  handoff-prompt.md  mcp-improvements-progress.md  mcp-improvements.md  mcp-migration.md
examples/: acidrack.toml  chord.toml  crush.toml  drive.toml  ringmod.toml
examples/assets/: a190e2e7-88de-4f37-813c-8e628380f7f1.wasm  a8e137a2-a67d-4b4e-ab3c-df362b814ad9.wasm  f2c08804-f607-4a47-a4a8-d824005e3e81.wasm
taskfiles/: config.yml  mcp.yml
taskfiles/crates/: publish.yml
taskfiles/frontend/: editor.yml  example.yml
