[workspace]
members = [
    "packages/crates/schema",
    "packages/crates/player",
    "packages/crates/worklet",
    "packages/crates/editor-protocol",
    "packages/frontend/editor",
    "packages/frontend/example",
    "packages/mcp",
    "packages/worklets/bitcrusher",
    "packages/worklets/drive",
    "packages/worklets/gain",
    "packages/worklets/ringmod",
]
resolver = "2"

[workspace.package]
description = "awsm audio"
edition = "2021"
version = "1.6.0"
license = "MIT OR Apache-2.0"
authors = ["David Komer"]
rust-version = "1.80.0"
repository = "https://github.com/awsm-fun/awsm-audio"

### Patches

# dominator 0.5.38 on crates.io is incompatible with web_sys_unstable_apis (mouse/scroll types became f64).
# Fix landed on master (commit 25597cd) but isn't published yet. We enable the
# unstable cfg for the WebAudio worklet bindings, so we need the patched dominator.
[patch.crates-io]
dominator = { git = "https://github.com/Pauan/rust-dominator", rev = "25597cd" }

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.32.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Which actions to run on pull requests
pr-run-mode = "plan"
# Build only the `awsm-audio-mcp` package (with `-p`), not the whole workspace —
# the workspace also holds wasm-only crates (the editor) that can't host-compile.
precise-builds = true
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false

### Profiles

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

### Dependencies

[workspace.dependencies]

# Internal awsm-audio-* crates. Version kept in lockstep with
# `workspace.package.version` so published crates carry concrete version reqs.
awsm-audio-schema = { path = "packages/crates/schema", version = "1.6.0" }
awsm-audio-player = { path = "packages/crates/player", version = "1.6.0" }
awsm-audio-worklet = { path = "packages/crates/worklet", version = "1.6.0" }
awsm-audio-editor-protocol = { path = "packages/crates/editor-protocol", version = "1.6.0" }

# Error handling
anyhow = "1.0.102"
thiserror = "2.0.18"

# Data formats
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Fast, deterministic (seedable) PRNG for noise synthesis. no_std, no getrandom.
fastrand = { version = "2.3.0", default-features = false }
# TOML is the authored on-disk format for schema documents (hand-editable).
toml = "0.8"

# Async
futures = "0.3.32"

# Logging
tracing = "0.1.44"
tracing-wasm = "0.2.1"

# Browser bindings and helpers
wasm-bindgen = "0.2.118"
js-sys = "0.3.95"
wasm-bindgen-futures = "0.4.68"
console_error_panic_hook = "0.1.7"

# Inline (base64) WASM module assets in saved projects
base64 = "0.22"

# Stable identifiers (UUIDs) shared across schema + editor protocol.
uuid = { version = "1.11.0", features = ["v4", "serde", "js"] }

# JSON Schema derivation for the MCP server's strongly-typed tool params. Optional
# everywhere (only the native MCP crate enables it); wasm builds never pull it.
schemars = { version = "1", default-features = false, features = ["derive"] }

# Standard MIDI File (.mid) parsing for the song sequencer. `parallel` (rayon)
# is disabled — it doesn't build on wasm32-unknown-unknown (no threads).
midly = { version = "0.5", default-features = false, features = ["std"] }

# Frontend (dominator stack)
dominator = "0.5.38"
futures-signals = "0.3.34"

[workspace.dependencies.web-sys]
version = "0.3.95"
features = [
    # General DOM surface the editor reaches for.
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "Navigator",
    "Performance",
    "Event",
    "EventTarget",

    # ---- WebAudio: contexts ----
    "AudioContext",
    "AudioContextOptions",
    "AudioContextState",
    "AudioContextLatencyCategory",
    "BaseAudioContext",
    "OfflineAudioContext",

    # ---- WebAudio: graph plumbing ----
    "AudioNode",
    "AudioNodeOptions",
    "AudioParam",
    "AudioParamMap",
    "AudioDestinationNode",
    "AudioListener",
    "ChannelCountMode",
    "ChannelInterpretation",
    "AudioScheduledSourceNode",

    # ---- WebAudio: buffers + sources ----
    "AudioBuffer",
    "AudioBufferOptions",
    "AudioBufferSourceNode",
    "AudioBufferSourceOptions",
    "OscillatorNode",
    "OscillatorOptions",
    "OscillatorType",
    "ConstantSourceNode",
    "ConstantSourceOptions",
    "PeriodicWave",
    "PeriodicWaveOptions",
    "PeriodicWaveConstraints",

    # ---- WebAudio: processing nodes ----
    "GainNode",
    "GainOptions",
    "BiquadFilterNode",
    "BiquadFilterOptions",
    "BiquadFilterType",
    "DelayNode",
    "DelayOptions",
    "DynamicsCompressorNode",
    "DynamicsCompressorOptions",
    "ConvolverNode",
    "ConvolverOptions",
    "WaveShaperNode",
    "WaveShaperOptions",
    "OverSampleType",
    "IirFilterNode",
    "IirFilterOptions",
    "AnalyserNode",
    "AnalyserOptions",
    # Real-time export: tap the master into a ScriptProcessor and capture samples.
    "ScriptProcessorNode",
    "AudioProcessingEvent",

    # ---- WebAudio: spatialization + routing ----
    "PannerNode",
    "PannerOptions",
    "PanningModelType",
    "DistanceModelType",
    "StereoPannerNode",
    "StereoPannerOptions",
    "ChannelMergerNode",
    "ChannelMergerOptions",
    "ChannelSplitterNode",
    "ChannelSplitterOptions",

    # ---- WebAudio: media bridges ----
    "MediaElementAudioSourceNode",
    "MediaElementAudioSourceOptions",
    "MediaStreamAudioSourceNode",
    "MediaStreamAudioSourceOptions",
    "MediaStreamAudioDestinationNode",
    "MediaStream",
    "HtmlMediaElement",
    "HtmlAudioElement",

    # ---- WebAudio: worklets (unstable; needs web_sys_unstable_apis) ----
    "Worklet",
    "WorkletOptions",
    "AudioWorklet",
    "AudioWorkletNode",
    "AudioWorkletNodeOptions",

    # ---- Blob URLs (inline AudioWorklet shim module) ----
    "Blob",
    "BlobPropertyBag",
    "Url",

    # ---- fetch (URL-sourced buffer / wasm assets) ----
    "Response",

    # ---- microphone capture (MediaStream source) ----
    "MediaDevices",
    "MediaStreamConstraints",
]
